apps/argocd/base/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.labs.andrewpjackson.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: labs-andrewpjackson-com-tls
